# limnopulse

./: .dockerignore  .env.example  .gitignore  Dockerfile.alert-evaluator  README.md  compose.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/alert-evaluator/: main.go
docs/: alert-evaluator-phase-3b.md  architecture.md  telemetry-phase-2a.md
examples/telemetry/: reading.local.json
infra/mqtt/: mosquitto.conf
infra/opentofu/: .terraform.lock.hcl  README.md  backend.example.hcl  cognito.tf  dynamodb.tf  outputs.tf  queues.tf  ses.tf  variables.tf  versions.tf
infra/telegraf/: device_registry.star  telegraf.conf
internal/alertevaluator/: config.go  config_test.go  ports.go  quality.go  quality_test.go  runner.go  runner_test.go  schedule.go  schedule_test.go  state_machine.go  state_machine_test.go
scripts/dev/: init_dynamodb.py  publish_sample_reading.py  seed_local.py
src/limnopulse_api/: __init__.py  main.py
src/limnopulse_api/adapters/: redis.py  (+5 more)
tests/adapters/: test_influxdb.py
tests/api/: test_alert_events.py  test_alert_rules.py  test_app_runtime.py  test_me.py  test_ponds_devices.py  test_telemetry.py  test_tenants.py
tests/unit/: test_alert_event_repository.py  test_alert_rule_domain.py  test_alert_rule_repository.py  test_alert_scheduling.py  test_auth_cognito.py  test_auth_dev.py  test_auth_jwks_cache.py  test_domain_repository.py  test_influxdb_adapter.py  test_init_dynamodb.py  test_local_ingestion_config.py  test_membership_cache.py  test_no_scan_guard.py  test_opentofu_infra.py  test_phase3b_boundaries.py  test_settings.py
(+69 files in other folders)
