[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "limnopulse-api"
version = "0.1.0"
description = "Limnopulse Phase 1 FastAPI foundation"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "cryptography>=42",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyJWT>=2.8",
  "redis>=5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.23",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
